[project]
name = "gdbb-engine"
version = "0.1.0"
description = "FastAPI engine for GDBB streaming optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.32.1",
  "pydantic>=2.10.3",
  "numpy>=2.2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "httpx>=0.28.1"
]

[build-system]
requires = ["setuptools>=75.6.0"]
build-backend = "setuptools.build_meta"

